add routing mechanism

--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/jsdom": "^21.1.6",
+    "@types/node": "^20.10.5",
+    "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "bootstrap": "^5.2.3"
   }
 }
